--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,8 @@ layout: default
     </div>
     <div class="c-contact-menu">
       {% if site.author-email %}
-      <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Send me</a>
+      <!-- <a href="/contact" class="c-contact-btn c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span> Send me</a> -->
+      <div class="c-btn c-btn--secondary c-btn--round c-btn--shadow"><span data-icon='ei-envelope' data-size='s'></span>{{site.author-email}}</a>
       {% else %}
       {% endif %}
       {% if site.author-twitter %}
@@ -22,7 +23,11 @@ layout: default
       {% else %}
       {% endif %}
     </div>
+    <br></br>
     <p class="c-author__about">{{site.about-author | strip_html | truncatewords: 50}}</p>
+    <br></br>
+    <br></br>
+    <br></br>
   </div>
 
   <div class="c-sidebar-footer">
