--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,15 @@ layout: home
             </div>
           </div>
         {% else %}
+          <div class="c-recent__item">
+            <a class="c-recent__image" href="{{ post.url }}"></a>
+            <div class="c-recent__footer">
+              <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+              <div class="c-recent__date">
+                <time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date: "%B %-d, %Y"}}</time>
+              </div>
+            </div>
+          </div>
         {% endif %}
         {% endfor %}
         </div>
